--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="./src/prefabs/Rocket2.js"></script>
     <script src="./src/prefabs/Spaceship.js"></script>
     <script src="./src/scenes/Menu.js"></script>
+    <script src="./src/scenes/Difficulty.js"></script>
     <script src="./src/scenes/Play.js"></script>
     <script src="./src/main.js"></script>
 </body>
